--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -28,3 +28,4 @@ $rss-color: #ff6600;
 $icon-transition-time: .2s;
 
 $container-responsive-width: 768px;
+$container-small-devices-width: 390px;
